<resources>
    <string name="app_name">Laboratorio 4</string>
    <string name="descargar">Descargar</string>
    <string name="actualizar">Actualizacion disponible</string>
    <string name="domingo">Domingo</string>
    <string name="fecha">11 de diciembre</string>
    <string name="terminar">Terminar jornada</string>
    <string name="bk">Burger King</string>
    <string name="dir">Calzada Roosevelt 35-68</string>
    <string name="horario">5:30 – 23:00</string>
    <string name="in">Iniciar</string>
    <string name="det">Detalles</string>

</resources>