<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@color/grey2"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginRight="10dp"
            app:srcCompat="@drawable/ic_action_name" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="244dp"
            android:layout_height="wrap_content"
            android:text="@string/actualizar"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/descargarBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/grey2"
            android:gravity="center"
            android:text="@string/descargar"
            android:textColor="@color/white"
            android:textSize="@dimen/font6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            tools:layout_editor_absoluteY="0dp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="@dimen/horizontal_width"
        android:layout_height="51dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="336dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/domingo"
            android:textColor="@color/white"
            android:textSize="@dimen/font2"
            android:textStyle="bold" />

        <ImageButton
            android:backgroundTint="@color/grey"
            android:id="@+id/ruta"
            android:layout_width="20dp"
            android:layout_height="20dp"
            app:srcCompat="@drawable/ic_baseline_directions_24"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="@dimen/horizontal_width"
        android:layout_height="wrap_content"
        android:background="@color/grey3"
        android:orientation="vertical"
        android:outlineAmbientShadowColor="@color/white"
        android:outlineSpotShadowColor="@color/white"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        app:layout_constraintVertical_bias="0.203">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bk"
            android:textColor="@color/white"
            android:textSize="@dimen/font1"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dir"
            android:textColor="@color/white"
            android:textSize="@dimen/font4" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/horario"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/kanye"
                android:textColor="@color/white"
                android:text="@string/in" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/grey3"
                android:text="@string/det"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="@dimen/horizontal_width"
        android:layout_height="51dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        app:layout_constraintVertical_bias="0.571">

        <TextView
            android:id="@+id/editTextTextPersonName"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/fecha"
            android:textColor="@color/white"
            android:textSize="@dimen/font3" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/grey"
            android:text="@string/terminar"
            android:textColor="@color/white"
            android:textSize="@dimen/font5"
            app:strokeColor="@color/white"
            app:strokeWidth="1dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>